src/test/ui/parser/keyword-enum-as-identifier.stderr
error: expected pattern, found keyword `enum`
  --> $DIR/keyword-enum-as-identifier.rs:4:9
   |
LL |     let enum = "foo"; //~ error: expected pattern, found keyword `enum`
   |         ^^^^ expected pattern

error: aborting due to previous error

